# EducIneq

./: .gitignore  156 12 nov 2024.ris  64 19 nov.ris  Database Field Tag Complete List.ods  EBSCO-Metadata-2024-11-19 50.ris  EBSCO-Metadata-2024-11-19 last.ris  Litt.adoc  RCTs.ris
Article/: educ.bib  educ.tex  first.bib  indirect.bib  manual.bib  sel.bib  zotlit.bib
Article/preamble/: packages.tex  redac.tex
LitZot/: pyproject.toml
LitZot/src/litzot/: main.py
